--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-appdirs==1.4.3
+appdirs==1.4.4
 asgiref==3.2.8
+autopep8==1.5.3
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -10,6 +11,7 @@ distro==1.4.0
 dj-database-url==0.5.0
 Django==3.0.7
 django-on-heroku==1.0.1
+djangorestframework==3.11.0
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
@@ -20,6 +22,7 @@ packaging==20.3
 pep517==0.8.2
 progress==1.5
 psycopg2-binary==2.8.5
+pycodestyle==2.6.0
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2020.1
@@ -27,6 +30,7 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 sqlparse==0.3.1
+toml==0.10.1
 urllib3==1.25.8
 webencodings==0.5.1
 whitenoise==5.1.0
